--- a/Signal/translations/fr.lproj/InfoPlist.strings
+++ b/Signal/translations/fr.lproj/InfoPlist.strings
@@ -3,7 +3,7 @@ NSCameraUsageDescription = "Signal utilise votre appareil photo lorsque vous pre
 NSContactsUsageDescription = "Signal accède à vos contacts pour trouver des utilisateurs que vous connaissez. Nous n'enregistrons pas vos contacts sur le serveur.";
 NSFaceIDUsageDescription = "Le verrouillage d'écran de Signal utilise la technologie Face ID.";
 NSLocationWhenInUseUsageDescription = "Pour partager votre position actuelle, Signal doit accéder à votre position.";
-NSMicrophoneUsageDescription = "Pour passer et recevoir des appels téléphoniques et pour enregistrer des messages vocaux, Signal doit accéder à votre microphone.";
+NSMicrophoneUsageDescription = "Pour passer et recevoir des appels téléphoniques, et enregistrer des messages vocaux, Signal doit accéder à votre microphone.";
 NSPhotoLibraryAddUsageDescription = "Signal enregistrera les photos dans votre photothèque.";
 NSPhotoLibraryUsageDescription = "Signal vous permettra de choisir les photos à envoyer depuis votre photothèque.";
 NSLocalNetworkUsageDescription = "Signal utilise votre réseau local pour vous permettre de transférer directement votre compte vers un nouveau téléphone. Ce réseau local n'est utilisé que lorsque vous choisissez explicitement d'effectuer un transfert vers un nouvel appareil.";
